--- a/Adversarial Attack.ipynb
+++ b/Adversarial Attack.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,202 +184,204 @@
      "output_type": "stream",
      "text": [
       "Certainty Degree 9.625923e-05\n",
-      "Certainty Degree 9.788212e-05\n",
-      "Certainty Degree 9.952395e-05\n",
-      "Certainty Degree 0.00010118422\n",
-      "Certainty Degree 0.00010290054\n",
-      "Certainty Degree 0.00010468772\n",
-      "Certainty Degree 0.00010653462\n",
-      "Certainty Degree 0.00010842558\n",
-      "Certainty Degree 0.000110317145\n",
-      "Certainty Degree 0.00011219464\n",
-      "Certainty Degree 0.000114090435\n",
-      "Certainty Degree 0.000116017385\n",
-      "Certainty Degree 0.000117974436\n",
-      "Certainty Degree 0.000119983524\n",
-      "Certainty Degree 0.000122034035\n",
-      "Certainty Degree 0.00012410384\n",
-      "Certainty Degree 0.00012624147\n",
-      "Certainty Degree 0.00012841231\n",
-      "Certainty Degree 0.00013059842\n",
-      "Certainty Degree 0.00013279326\n",
-      "Certainty Degree 0.00013500046\n",
-      "Certainty Degree 0.00013725461\n",
-      "Certainty Degree 0.00013958917\n",
-      "Certainty Degree 0.00014199049\n",
-      "Certainty Degree 0.00014441062\n",
-      "Certainty Degree 0.00014682316\n",
-      "Certainty Degree 0.00014925798\n",
-      "Certainty Degree 0.00015171776\n",
-      "Certainty Degree 0.00015420865\n",
-      "Certainty Degree 0.00015676045\n",
-      "Certainty Degree 0.00015934036\n",
-      "Certainty Degree 0.00016197223\n",
-      "Certainty Degree 0.00016461754\n",
-      "Certainty Degree 0.00016728885\n",
-      "Certainty Degree 0.00016997915\n",
-      "Certainty Degree 0.00017271102\n",
-      "Certainty Degree 0.00017550237\n",
-      "Certainty Degree 0.00017834072\n",
-      "Certainty Degree 0.00018123089\n",
-      "Certainty Degree 0.00018421945\n",
-      "Certainty Degree 0.00018722069\n",
-      "Certainty Degree 0.00019024077\n",
-      "Certainty Degree 0.00019330342\n",
-      "Certainty Degree 0.00019636207\n",
-      "Certainty Degree 0.00019950626\n",
-      "Certainty Degree 0.00020273539\n",
-      "Certainty Degree 0.00020594848\n",
-      "Certainty Degree 0.00020921222\n",
-      "Certainty Degree 0.0002125209\n",
-      "Certainty Degree 0.00021580918\n",
-      "Certainty Degree 0.00021910551\n",
-      "Certainty Degree 0.00022243986\n",
-      "Certainty Degree 0.00022581579\n",
-      "Certainty Degree 0.00022920255\n",
-      "Certainty Degree 0.0002326435\n",
-      "Certainty Degree 0.00023606363\n",
-      "Certainty Degree 0.00023954896\n",
-      "Certainty Degree 0.00024307516\n",
-      "Certainty Degree 0.000246608\n",
-      "Certainty Degree 0.0002501362\n",
-      "Certainty Degree 0.00025372606\n",
-      "Certainty Degree 0.00025736133\n",
-      "Certainty Degree 0.0002609398\n",
-      "Certainty Degree 0.00026457745\n",
-      "Certainty Degree 0.00026829002\n",
-      "Certainty Degree 0.00027207664\n",
-      "Certainty Degree 0.00027587998\n",
-      "Certainty Degree 0.0002797425\n",
-      "Certainty Degree 0.0002837177\n",
-      "Certainty Degree 0.00028772722\n",
-      "Certainty Degree 0.00029177696\n",
-      "Certainty Degree 0.00029586992\n",
-      "Certainty Degree 0.0002999517\n",
-      "Certainty Degree 0.00030408008\n",
-      "Certainty Degree 0.00030824426\n",
-      "Certainty Degree 0.00031248498\n",
-      "Certainty Degree 0.00031675765\n",
-      "Certainty Degree 0.0003211117\n",
-      "Certainty Degree 0.00032558228\n",
-      "Certainty Degree 0.00033014992\n",
-      "Certainty Degree 0.0003348227\n",
-      "Certainty Degree 0.0003397023\n",
-      "Certainty Degree 0.0003447891\n",
-      "Certainty Degree 0.00034989303\n",
-      "Certainty Degree 0.00035504834\n",
-      "Certainty Degree 0.0003603474\n",
-      "Certainty Degree 0.0003657465\n",
-      "Certainty Degree 0.00037129698\n",
-      "Certainty Degree 0.00037696163\n",
-      "Certainty Degree 0.000382765\n",
-      "Certainty Degree 0.0003887658\n",
-      "Certainty Degree 0.00039495918\n",
-      "Certainty Degree 0.00040115518\n",
-      "Certainty Degree 0.00040741614\n",
-      "Certainty Degree 0.00041375673\n",
-      "Certainty Degree 0.00042032206\n",
-      "Certainty Degree 0.00042695514\n",
-      "Certainty Degree 0.00043369507\n",
-      "Certainty Degree 0.00044076305\n",
-      "Certainty Degree 0.000448081\n",
-      "Certainty Degree 0.00045553694\n",
-      "Certainty Degree 0.00046323924\n",
-      "Certainty Degree 0.00047097984\n",
-      "Certainty Degree 0.00047889873\n",
-      "Certainty Degree 0.0004868791\n",
-      "Certainty Degree 0.0004950412\n",
-      "Certainty Degree 0.00050359836\n",
-      "Certainty Degree 0.0005124048\n",
-      "Certainty Degree 0.0005215214\n",
-      "Certainty Degree 0.00053082866\n",
-      "Certainty Degree 0.00054032315\n",
-      "Certainty Degree 0.0005499436\n",
-      "Certainty Degree 0.00055975263\n",
-      "Certainty Degree 0.000569802\n",
-      "Certainty Degree 0.00058015616\n",
-      "Certainty Degree 0.0005906778\n",
-      "Certainty Degree 0.00060148153\n",
-      "Certainty Degree 0.0006125997\n",
-      "Certainty Degree 0.00062433915\n",
-      "Certainty Degree 0.00063617894\n",
-      "Certainty Degree 0.0006484174\n",
-      "Certainty Degree 0.00066093437\n",
-      "Certainty Degree 0.0006740119\n",
-      "Certainty Degree 0.0006875823\n",
-      "Certainty Degree 0.00070136494\n",
-      "Certainty Degree 0.0007157506\n",
-      "Certainty Degree 0.00073080685\n",
-      "Certainty Degree 0.00074629375\n",
-      "Certainty Degree 0.0007623536\n",
-      "Certainty Degree 0.000779241\n",
-      "Certainty Degree 0.0007967196\n",
-      "Certainty Degree 0.0008154693\n",
-      "Certainty Degree 0.00083459174\n",
-      "Certainty Degree 0.00085394754\n",
-      "Certainty Degree 0.0008744885\n",
-      "Certainty Degree 0.00089535594\n",
-      "Certainty Degree 0.00091737247\n",
-      "Certainty Degree 0.0009405976\n",
-      "Certainty Degree 0.00096431654\n",
-      "Certainty Degree 0.0009891837\n",
-      "Certainty Degree 0.0010150817\n",
-      "Certainty Degree 0.0010420473\n",
-      "Certainty Degree 0.0010702665\n",
-      "Certainty Degree 0.0011004489\n",
-      "Certainty Degree 0.0011316891\n",
-      "Certainty Degree 0.0011630307\n",
-      "Certainty Degree 0.0011952278\n",
-      "Certainty Degree 0.0012293122\n",
-      "Certainty Degree 0.0012671013\n",
-      "Certainty Degree 0.0013038579\n",
-      "Certainty Degree 0.0013433312\n",
-      "Certainty Degree 0.001389345\n",
-      "Certainty Degree 0.0014382822\n",
-      "Certainty Degree 0.0014862338\n",
-      "Certainty Degree 0.0015353893\n",
-      "Certainty Degree 0.0015901349\n",
-      "Certainty Degree 0.0016502948\n",
-      "Certainty Degree 0.0017051825\n",
-      "Certainty Degree 0.001772303\n",
-      "Certainty Degree 0.0018503238\n",
-      "Certainty Degree 0.0019336129\n",
-      "Certainty Degree 0.0020207448\n",
-      "Certainty Degree 0.002095894\n",
-      "Certainty Degree 0.00218618\n",
-      "Certainty Degree 0.0022641204\n",
-      "Certainty Degree 0.002446466\n",
-      "Certainty Degree 0.0025837172\n",
-      "Certainty Degree 0.002745385\n",
-      "Certainty Degree 0.0028667846\n",
-      "Certainty Degree 0.0031256182\n",
-      "Certainty Degree 0.0033641423\n",
-      "Certainty Degree 0.003578727\n",
-      "Certainty Degree 0.0037109265\n",
-      "Certainty Degree 0.004077474\n",
-      "Certainty Degree 0.0042496184\n",
-      "Certainty Degree 0.0047995374\n",
-      "Certainty Degree 0.005511809\n",
-      "Certainty Degree 0.0063118585\n",
-      "Certainty Degree 0.0059565776\n",
-      "Certainty Degree 0.00896828\n",
-      "Certainty Degree 0.00697831\n",
-      "Certainty Degree 0.012933463\n",
-      "Certainty Degree 0.006734371\n",
-      "Certainty Degree 0.023204127\n",
-      "Certainty Degree 0.0144690955\n",
-      "Certainty Degree 0.02425673\n",
-      "Certainty Degree 0.01010485\n",
-      "Certainty Degree 0.040394314\n",
-      "Certainty Degree 0.046148356\n",
-      "Certainty Degree 0.03471944\n",
-      "Certainty Degree 0.15424661\n",
-      "Certainty Degree 0.04097173\n",
-      "Certainty Degree 0.14468776\n",
-      "Certainty Degree 0.27640805\n",
-      "Certainty Degree 0.052802105\n",
-      "Certainty Degree 0.8330288\n",
-      "Certainty Degree 0.95769507\n"
+      "Certainty Degree 9.788221e-05\n",
+      "Certainty Degree 9.952392e-05\n",
+      "Certainty Degree 0.000101184225\n",
+      "Certainty Degree 0.00010290044\n",
+      "Certainty Degree 0.00010468746\n",
+      "Certainty Degree 0.00010653429\n",
+      "Certainty Degree 0.00010842394\n",
+      "Certainty Degree 0.00011031594\n",
+      "Certainty Degree 0.00011219319\n",
+      "Certainty Degree 0.00011408971\n",
+      "Certainty Degree 0.000116016796\n",
+      "Certainty Degree 0.000117974036\n",
+      "Certainty Degree 0.0001199838\n",
+      "Certainty Degree 0.00012203412\n",
+      "Certainty Degree 0.00012410394\n",
+      "Certainty Degree 0.0001262387\n",
+      "Certainty Degree 0.00012841157\n",
+      "Certainty Degree 0.00013059695\n",
+      "Certainty Degree 0.00013279461\n",
+      "Certainty Degree 0.00013500263\n",
+      "Certainty Degree 0.00013725336\n",
+      "Certainty Degree 0.0001395844\n",
+      "Certainty Degree 0.00014198378\n",
+      "Certainty Degree 0.00014440835\n",
+      "Certainty Degree 0.00014682127\n",
+      "Certainty Degree 0.00014925409\n",
+      "Certainty Degree 0.00015170636\n",
+      "Certainty Degree 0.00015419147\n",
+      "Certainty Degree 0.0001567359\n",
+      "Certainty Degree 0.00015931601\n",
+      "Certainty Degree 0.00016195109\n",
+      "Certainty Degree 0.00016459699\n",
+      "Certainty Degree 0.00016727229\n",
+      "Certainty Degree 0.0001699598\n",
+      "Certainty Degree 0.00017270175\n",
+      "Certainty Degree 0.00017550215\n",
+      "Certainty Degree 0.00017835131\n",
+      "Certainty Degree 0.00018124266\n",
+      "Certainty Degree 0.00018423818\n",
+      "Certainty Degree 0.00018723875\n",
+      "Certainty Degree 0.00019025791\n",
+      "Certainty Degree 0.000193315\n",
+      "Certainty Degree 0.00019639253\n",
+      "Certainty Degree 0.0001995445\n",
+      "Certainty Degree 0.00020277906\n",
+      "Certainty Degree 0.00020600024\n",
+      "Certainty Degree 0.00020926447\n",
+      "Certainty Degree 0.00021257933\n",
+      "Certainty Degree 0.00021586298\n",
+      "Certainty Degree 0.00021918232\n",
+      "Certainty Degree 0.00022251962\n",
+      "Certainty Degree 0.00022589565\n",
+      "Certainty Degree 0.00022929712\n",
+      "Certainty Degree 0.00023273772\n",
+      "Certainty Degree 0.00023618147\n",
+      "Certainty Degree 0.00023967793\n",
+      "Certainty Degree 0.00024319522\n",
+      "Certainty Degree 0.00024673037\n",
+      "Certainty Degree 0.0002502539\n",
+      "Certainty Degree 0.0002538427\n",
+      "Certainty Degree 0.00025749076\n",
+      "Certainty Degree 0.00026108616\n",
+      "Certainty Degree 0.00026472303\n",
+      "Certainty Degree 0.0002684511\n",
+      "Certainty Degree 0.00027226363\n",
+      "Certainty Degree 0.00027607483\n",
+      "Certainty Degree 0.0002799283\n",
+      "Certainty Degree 0.0002838488\n",
+      "Certainty Degree 0.00028782448\n",
+      "Certainty Degree 0.0002918718\n",
+      "Certainty Degree 0.00029596672\n",
+      "Certainty Degree 0.00030003916\n",
+      "Certainty Degree 0.00030411532\n",
+      "Certainty Degree 0.00030826815\n",
+      "Certainty Degree 0.00031252223\n",
+      "Certainty Degree 0.00031685276\n",
+      "Certainty Degree 0.00032124354\n",
+      "Certainty Degree 0.00032571316\n",
+      "Certainty Degree 0.0003302828\n",
+      "Certainty Degree 0.0003349811\n",
+      "Certainty Degree 0.00033982433\n",
+      "Certainty Degree 0.00034483898\n",
+      "Certainty Degree 0.0003499462\n",
+      "Certainty Degree 0.0003551263\n",
+      "Certainty Degree 0.0003604663\n",
+      "Certainty Degree 0.0003659368\n",
+      "Certainty Degree 0.00037144744\n",
+      "Certainty Degree 0.0003771475\n",
+      "Certainty Degree 0.0003829252\n",
+      "Certainty Degree 0.00038894376\n",
+      "Certainty Degree 0.00039510243\n",
+      "Certainty Degree 0.00040123335\n",
+      "Certainty Degree 0.00040746684\n",
+      "Certainty Degree 0.00041381933\n",
+      "Certainty Degree 0.00042034275\n",
+      "Certainty Degree 0.00042704557\n",
+      "Certainty Degree 0.00043383383\n",
+      "Certainty Degree 0.0004408172\n",
+      "Certainty Degree 0.00044817766\n",
+      "Certainty Degree 0.00045571395\n",
+      "Certainty Degree 0.00046340612\n",
+      "Certainty Degree 0.00047109436\n",
+      "Certainty Degree 0.00047888517\n",
+      "Certainty Degree 0.00048691808\n",
+      "Certainty Degree 0.0004952128\n",
+      "Certainty Degree 0.00050381845\n",
+      "Certainty Degree 0.00051267614\n",
+      "Certainty Degree 0.0005217654\n",
+      "Certainty Degree 0.00053111924\n",
+      "Certainty Degree 0.0005406231\n",
+      "Certainty Degree 0.0005502777\n",
+      "Certainty Degree 0.00056020595\n",
+      "Certainty Degree 0.0005704379\n",
+      "Certainty Degree 0.00058071665\n",
+      "Certainty Degree 0.00059124886\n",
+      "Certainty Degree 0.0006020597\n",
+      "Certainty Degree 0.0006133621\n",
+      "Certainty Degree 0.00062507496\n",
+      "Certainty Degree 0.0006369002\n",
+      "Certainty Degree 0.0006491392\n",
+      "Certainty Degree 0.00066172454\n",
+      "Certainty Degree 0.00067479355\n",
+      "Certainty Degree 0.00068835233\n",
+      "Certainty Degree 0.0007022844\n",
+      "Certainty Degree 0.0007167803\n",
+      "Certainty Degree 0.0007317244\n",
+      "Certainty Degree 0.00074719725\n",
+      "Certainty Degree 0.0007634058\n",
+      "Certainty Degree 0.0007802615\n",
+      "Certainty Degree 0.0007978201\n",
+      "Certainty Degree 0.00081657723\n",
+      "Certainty Degree 0.0008357549\n",
+      "Certainty Degree 0.00085562153\n",
+      "Certainty Degree 0.0008765049\n",
+      "Certainty Degree 0.0008979178\n",
+      "Certainty Degree 0.00091961893\n",
+      "Certainty Degree 0.000942109\n",
+      "Certainty Degree 0.000965271\n",
+      "Certainty Degree 0.0009906949\n",
+      "Certainty Degree 0.0010173495\n",
+      "Certainty Degree 0.0010451436\n",
+      "Certainty Degree 0.0010737012\n",
+      "Certainty Degree 0.0011021032\n",
+      "Certainty Degree 0.0011304921\n",
+      "Certainty Degree 0.0011620215\n",
+      "Certainty Degree 0.0011947748\n",
+      "Certainty Degree 0.0012304968\n",
+      "Certainty Degree 0.0012692113\n",
+      "Certainty Degree 0.0013090852\n",
+      "Certainty Degree 0.0013500801\n",
+      "Certainty Degree 0.0013927739\n",
+      "Certainty Degree 0.0014407441\n",
+      "Certainty Degree 0.0014932017\n",
+      "Certainty Degree 0.0015426753\n",
+      "Certainty Degree 0.0016019194\n",
+      "Certainty Degree 0.0016560787\n",
+      "Certainty Degree 0.0017093241\n",
+      "Certainty Degree 0.0017740619\n",
+      "Certainty Degree 0.0018524334\n",
+      "Certainty Degree 0.0019226156\n",
+      "Certainty Degree 0.0020174321\n",
+      "Certainty Degree 0.002106542\n",
+      "Certainty Degree 0.002210112\n",
+      "Certainty Degree 0.0022979446\n",
+      "Certainty Degree 0.002454938\n",
+      "Certainty Degree 0.0025939308\n",
+      "Certainty Degree 0.0027666544\n",
+      "Certainty Degree 0.0029234437\n",
+      "Certainty Degree 0.0031034462\n",
+      "Certainty Degree 0.003362054\n",
+      "Certainty Degree 0.0036139456\n",
+      "Certainty Degree 0.0037244754\n",
+      "Certainty Degree 0.004221481\n",
+      "Certainty Degree 0.004580974\n",
+      "Certainty Degree 0.0049362574\n",
+      "Certainty Degree 0.004947219\n",
+      "Certainty Degree 0.005909491\n",
+      "Certainty Degree 0.0065651424\n",
+      "Certainty Degree 0.00749772\n",
+      "Certainty Degree 0.0073445286\n",
+      "Certainty Degree 0.010874434\n",
+      "Certainty Degree 0.0070668138\n",
+      "Certainty Degree 0.022862624\n",
+      "Certainty Degree 0.006739068\n",
+      "Certainty Degree 0.021080432\n",
+      "Certainty Degree 0.031164618\n",
+      "Certainty Degree 0.0218342\n",
+      "Certainty Degree 0.05711049\n",
+      "Certainty Degree 0.0260108\n",
+      "Certainty Degree 0.17948672\n",
+      "Certainty Degree 0.023555635\n",
+      "Certainty Degree 0.2316468\n",
+      "Certainty Degree 0.3011766\n",
+      "Certainty Degree 0.09606274\n",
+      "Certainty Degree 0.893509\n",
+      "Certainty Degree 0.85470426\n",
+      "Certainty Degree 0.91425145\n",
+      "Certainty Degree 0.9782739\n"
      ]
     }
    ],
